# shapeGMMTorch

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.ympl  python-package.yml
examples/: pytorch_alignment.ipynb  pytorch_tests.ipynb  shapeGMMTorch_tests.ipynb
examples/adp_example/: .adp_amber99_T300_2dMetad.trr_offsets.npz  .run_ala2_metad_sigma0.3_height1.2_pace500.xtc_offsets.npz  .run_ala2_metad_sigma0.3_height1.2_pace500_bf10.xtc_offsets.npz  adp_amber99_T300_2dMetad.gro  adp_amber99_T300_2dMetad.trr  cluster_adp_metaD_weights.ipynb  colvar  plumed_source_script.sh  run_ala2_metad_sigma0.3_height1.2_pace500.gro  run_plumed_driver.sh
examples/alignment/: align_beaded_helix.ipynb
examples/beaded_helix_example/: cluster_beaded_helix.ipynb  cluster_beaded_helix_frame_weights.ipynb
examples/junk/: shapeGMMTorch_kronecker_tests.ipynb
src/: torch_kronecker_sgmm_lib.py  torch_sgmm.py  torch_uniform_lib.py  torch_uniform_sgmm_lib.py
src/shapeGMMTorch/: __init__.py  align.py  align.txt  align_in_place.py  core.py  generate.py  generate_points.py  generation.py  kronecker_sgmm_lib.py  plots.py  scripts.py  similarities.py  torch_align.py  torch_align_to_cpu.py  torch_kronecker_sgmm_lib.py  torch_sgmm.py  torch_uniform_sgmm_lib.py  utils.py  (+1 more)
src/shapeGMMTorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_align.py  test_core.py  test_core_float32.py  test_core_float64.py  test_generation.py  test_io.py  test_kronecker.py  test_similarity.py  test_uniform.py  test_version.py
(+40 files in other folders)
